--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,4 @@
+
 :root {
     --prime-color: #fb1;
     --second-color: #906;
@@ -5,7 +6,7 @@
 
     font-family: 'comic sans', sans-serif;
     background-color: white;
-    min-height: 100%;
+    min-height: 100vh;
     
 }
 
@@ -19,11 +20,12 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-height: 100%;
-    min-width: 100%;
+    min-height: 100vh;
+    min-width: 100vh;
     margin: 0;
+    /* background-image: url("../images/SphericalBob.jpg"); */
     background-position: center;
-    background-size: 100%;
+    background-size: 100vh;
     background-attachment: local;
 }
 
@@ -69,6 +71,7 @@ nav {
 
   
 header {
+    margin-bottom: auto;
     display: flex;
     list-style: none;
     font-size: 150%;
@@ -89,7 +92,7 @@ header h2 {
 
 main {
     display: flex;
-    margin: 4%;
+    margin: 4vh;
     flex-direction: column;
     height: 100%;
     align-items: center;
@@ -98,9 +101,10 @@ main {
 
 main .header {
     align-items: center;
+    
 }
 main img {
-    max-width: 100%;
+    max-width: 100vh;
 }
 
 main .textbox{
@@ -110,10 +114,12 @@ main .textbox{
 
 footer {
     margin-top: auto;
-    margin-bottom: 0%;
+    margin-bottom: 0;
+
     display: flex;
     flex-direction: row;
-    height: 9%;
+    height: 9vh;
+    min-width: 100vh;
     justify-content: center;
     align-items: center;
     background-color: var(--prime-color);
