--- a/css/index.css
+++ b/css/index.css
@@ -89,6 +89,7 @@ li a:hover:not(.active) {
 
 header {
     background-color: #b6daff;
+    text-align: center;
 }
 
 .navigator {
@@ -110,4 +111,8 @@ footer {
     position: relative;
     bottom: 0;
 
+}
+
+h1 {
+    text-align: center;
 }
