--- a/css/template.css
+++ b/css/template.css
@@ -25,6 +25,7 @@ body{
     background-position: center;
     background-size: 100%;
     background-attachment: local;
+    text-align: center;
 }
 
 nav {
@@ -118,5 +119,9 @@ footer {
     align-items: center;
     background-color: var(--prime-color);
 
+}
+
+h1 {
+    text-align: center;
 }
 
